--- a/Myfirstwebpage.html
+++ b/Myfirstwebpage.html
@@ -3,12 +3,12 @@
 <head>
   <title>My first webpage!</title>
 </head>
-<body>
+<body><p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
   <h1>My First Webpage</h1>
-  <h2>Written with a little guidance from Moringa school</h2>
+  <h2>Written with a little guidance from <em>Moringa school</em></h2>
 
   <p>Hello, world!</p>
-  <p>Welcome to my first webpage!</p>
+  <p>Welcome to my <strong>first webpage</strong>!</p>
 
   <p>Here are some things I'm going to learn about coding:</p>
   <ul>
@@ -17,6 +17,7 @@
     <li>Javascript</li>
     <li>And a lot more</li>
   </ul>
-
+  <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+  <img src="Myfirstwebpage/elephant.jpg" alt="A photo of an elephant"
 </body>
 </html>
