--- a/pet.html
+++ b/pet.html
@@ -7,16 +7,20 @@
   <h1>SCOOBY</h1>
   <h2>White, furry and jumpy</h2>
 
-  <p>Scooby my dog is a happy dog</p>
+  <p><strong>Scooby</strong> my dog is a happy dog</p>
   <p>He skips, jumps and barks around whenever he sees or smells me</p>
 
-  <p>My dog scooby loves:</p>
-
+  <p>My dog <em>scooby</em> loves:</p>
+  <p><em>scooby</em>looks something like this:</p>
   <ul>
     <li>To sleep</li>
     <li>To bark</li>
     <li>To wag her tail</li>
   </ul>
+  <p>Here is a link to his <a href="favoriteblanket.html">favoriteblanket</a>.</p>
+  <img src="images/dog.jpg" alt="A photo of a dog">
+
+
 
 </body>
 </html>
