--- a/pet.html
+++ b/pet.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>My Pet Scooby</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <h1>SCOOBY</h1>
